Fix background overlay transition

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -90,7 +90,7 @@
                 <p class="subtitle has-text-light">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
-                <a class="button is-light is-outlined is-rounded" href="https://twitter.com/itsandreramon" target="_blank">
+                <a class="button is-light is-outlined is-rounded" href="work.html" target="_blank">
                     <span>See my work</span>
                 </a>
             </div>
