Adjsut font color

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -86,8 +86,8 @@
         <!-- Body -->
         <div class="hero-body has-text-centered fadeinbody header-image">
             <div class="container">
-                <h1 class="title is-size-2 has-text-light">Welcome</h1>
-                <p class="subtitle has-text-light">
+                <h1 class="title is-size-2 has-text-white">Welcome</h1>
+                <p class="subtitle has-text-white">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
                 <a class="button is-light is-outlined is-rounded" href="work.html" target="_blank">
