--- a/src/html/index.html
+++ b/src/html/index.html
@@ -102,10 +102,15 @@
             <p>
                 Personal Website by
                 <a href="https://github.com/itsandreramon" target="_blank">André Thiele</a>.
-                <br/>This work is licensed under a
+            </p>
+            <p>
+                This work is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
-                <br/>
-                Photo by <a href="https://unsplash.com/photos/Fehuczca-MM" target="_blank">Cason Asher</a> on <a href="https://unsplash.com/" target="_blank">Unsplash</a>.
+            </p>
+            <p>
+                Photo by
+                <a href="https://unsplash.com/photos/Fehuczca-MM" target="_blank">Cason Asher</a> on
+                <a href="https://unsplash.com/" target="_blank">Unsplash</a>.
             </p>
         </div>
     </footer>
