--- a/src/html/index.html
+++ b/src/html/index.html
@@ -99,15 +99,15 @@
 
     <footer class="footer has-background-white">
         <div class="content has-text-centered has-text-grey-light">
-            <p>
+            <p class="is-footer-element">
                 Personal Website by
                 <a href="https://github.com/itsandreramon" target="_blank">André Thiele</a>.
             </p>
-            <p>
+            <p class="is-footer-element">
                 This work is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
             </p>
-            <p>
+            <p class="is-footer-element">
                 Photo by
                 <a href="https://unsplash.com/photos/Fehuczca-MM" target="_blank">Cason Asher</a> on
                 <a href="https://unsplash.com/" target="_blank">Unsplash</a>.
