Adjust footer links

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -89,28 +89,22 @@
                 <p class="subtitle has-text-white">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
-                <a class="button is-light is-outlined is-rounded" href="work.html" target="_blank">
+                <a class="button is-white is-outlined is-rounded" href="work.html" target="_blank">
                     <span>See my work</span>
                 </a>
             </div>
         </div>
-
     </section>
 
     <footer class="footer has-background-white">
         <div class="content has-text-centered has-text-grey-light">
             <p class="is-footer-element">
-                Personal Website by
-                <a href="https://github.com/itsandreramon" target="_blank">André Thiele</a>.
+                Photo by
+                <a rel="license" href="https://unsplash.com/photos/Fehuczca-MM" target="_blank">Cason Asher</a>.
             </p>
             <p class="is-footer-element">
                 This work is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
-            </p>
-            <p class="is-footer-element">
-                Photo by
-                <a href="https://unsplash.com/photos/Fehuczca-MM" target="_blank">Cason Asher</a> on
-                <a href="https://unsplash.com/" target="_blank">Unsplash</a>.
             </p>
         </div>
     </footer>
