Remove SVG brand

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,8 +28,8 @@
 
         <nav class="navbar is-light has-background-white is-fixed-top">
             <div class="navbar-brand">
-                <a class="navbar-item" href="index.html">
-                    <img src="../assets/brand/brand.svg" class="brandimg">
+                <a class="navbar-item spaced-letters" href="index.html">
+                    ANDRÉ THIELE
                 </a>
 
                 <!-- When smaller than 1087px -->
