Change footer and button in the hero body

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -89,8 +89,8 @@
                 <p class="subtitle has-text-white">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
-                <a class="button is-white is-outlined is-rounded" href="work.html" target="_blank">
-                    <span>See my work</span>
+                <a class="button is-white is-outlined is-rounded" href="about.html" target="_blank">
+                    <span>Learn more</span>
                 </a>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <a rel="license" href="https://unsplash.com/photos/Fehuczca-MM" target="_blank">Cason Asher</a>.
             </p>
             <p class="is-footer-element">
-                This work is licensed under a
+                This website is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
             </p>
         </div>
