Add button animation to brand and learn more button

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,7 +28,7 @@
 
         <nav class="navbar is-light has-background-white is-fixed-top">
             <div class="navbar-brand">
-                <a class="navbar-item spaced-letters" href="index.html">
+                <a class="navbar-item spaced-letters button-animated-min" href="index.html">
                     ANDRÉ THIELE
                 </a>
 
@@ -89,7 +89,7 @@
                 <p class="subtitle has-text-white">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
-                <a class="button is-white is-outlined is-rounded" href="about.html" target="_blank">
+                <a class="button is-white is-outlined is-rounded button-animated-min" href="about.html" target="_blank">
                     <span>Learn more</span>
                 </a>
             </div>
