--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,6 @@
 
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script language="javascript" type="text/javascript" src="../js/fade.js"></script>
-    <script language="javascript" type="text/javascript" src="../js/scroll.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon/favicon.ico">
     <link rel="icon" type="image/png" href="../assets/favicon/favicon.png" sizes="32x32">
@@ -21,63 +20,62 @@
 
 <body onload="fadeinbody()">
 
-    <section id="home" class="hero is-fullheight">
+    <!-- Navigation -->
+    <div id="darkenbackground"></div>
+    <!-- <div class="helperline"></div> -->
 
-        <!-- Navigation -->
-        <div id="darkenbackground"></div>
-        <!-- <div class="helperline"></div> -->
+    <nav class="navbar is-light has-background-white is-fixed-top">
+        <div class="navbar-brand">
+            <a class="navbar-item spaced-letters button-animated-min" href="index.html">
+                ANDRÉ THIELE
+            </a>
 
-        <nav class="navbar is-light has-background-white is-fixed-top">
-            <div class="navbar-brand">
-                <a class="navbar-item spaced-letters button-animated-min" href="index.html">
-                    ANDRÉ THIELE
+            <!-- When smaller than 1087px -->
+            <div id="menuToggle">
+                <input type="checkbox" onclick="fadeinbackground()" />
+
+                <span></span>
+                <span></span>
+                <span></span>
+
+                <ul id="menu">
+                    <li>
+                        <a class="menuelement" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="menuelement" href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a class="menuelement" href="work.html">Work</a>
+                    </li>
+                    <li>
+                        <a class="menuelement" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="navbar-menu">
+
+            <div class="navbar-end">
+                <a class="navbar-item button-animated" href="index.html">
+                    Home
                 </a>
-
-                <!-- When smaller than 1087px -->
-                <div id="menuToggle">
-                    <input type="checkbox" onclick="fadeinbackground()" />
-
-                    <span></span>
-                    <span></span>
-                    <span></span>
-
-                    <ul id="menu">
-                        <li>
-                            <a class="menuelement" href="#home">Home</a>
-                        </li>
-                        <li>
-                            <a class="menuelement" href="#about">About</a>
-                        </li>
-                        <li>
-                            <a class="menuelement" href="#work">Work</a>
-                        </li>
-                        <li>
-                            <a class="menuelement" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+                <a class="navbar-item button-animated" href="about.html">
+                    About
+                </a>
+                <a class="navbar-item button-animated" href="work.html">
+                    Work
+                </a>
+                <a class="navbar-item button-animated" href="contract.html">
+                    Contact
+                </a>
             </div>
+        </div>
+    </nav>
 
-            <div class="navbar-menu">
-
-                <div class="navbar-end">
-                    <a class="navbar-item button-animated" href="#home" onclick="link_scrollup()">
-                        Home
-                    </a>
-                    <a class="navbar-item button-animated" href="#about" onclick="link_scrollup()">
-                        About
-                    </a>
-                    <a class="navbar-item button-animated" href="#work">
-                        Work
-                    </a>
-                    <a class="navbar-item button-animated" href="#contact">
-                        Contact
-                    </a>
-                </div>
-            </div>
-        </nav>
-
-        <!-- Body -->
+    <!-- Home Section -->
+    <section class="hero is-fullheight">
         <div class="hero-body has-text-centered fadeinbody header-image">
             <div class="container">
                 <h1 class="title is-size-2 has-text-white">Welcome</h1>
@@ -91,7 +89,8 @@
         </div>
     </section>
 
-    <footer class="footer has-background-light">
+    <!-- Footer -->
+    <footer class="footer has-background-white">
         <div class="content has-text-centered has-text-grey-light">
             <p class="is-footer-element">
                 Photo by
