--- a/src/html/index.html
+++ b/src/html/index.html
@@ -67,7 +67,7 @@
                 <a class="navbar-item button-animated" href="work.html">
                     Work
                 </a>
-                <a class="navbar-item button-animated" href="contract.html">
+                <a class="navbar-item button-animated" href="contact.html">
                     Contact
                 </a>
             </div>
@@ -78,11 +78,17 @@
     <section class="hero is-fullheight">
         <div class="hero-body has-text-centered fadeinbody header-image">
             <div class="container">
-                <h1 class="title is-size-2 has-text-white">Welcome</h1>
-                <p class="subtitle has-text-white">
-                    André Thiele is a computer science student from Brandenburg, Germany.
-                </p>
-                <a class="button is-white is-outlined is-rounded button-animated-min" href="about.html" target="_blank">
+                <div class="welcome-heading">
+                    <h1 class="title is-size-2 has-text-white">Welcome</h1>
+                </div>
+
+                <div class="welcome-text">
+                    <p class="subtitle has-text-white">
+                        André Thiele is a computer science student from Brandenburg, Germany.
+                    </p>
+                </div>
+
+                <a class="button is-white is-outlined is-rounded button-animated-min" href="about.html">
                     <span>Learn more</span>
                 </a>
             </div>
@@ -90,7 +96,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer has-background-white">
+    <footer class="footer">
         <div class="content has-text-centered has-text-grey-light">
             <p class="is-footer-element">
                 Photo by
