--- a/src/html/index.html
+++ b/src/html/index.html
@@ -78,6 +78,9 @@
     <section class="hero is-fullheight">
         <div class="hero-body has-text-centered fadeinbody header-image">
             <div class="container">
+                <!--<div class="helper-one"></div>-->
+                <!--<div class="helper-two"></div>-->
+
                 <div class="welcome-heading">
                     <h1 class="title is-size-2 has-text-white">Welcome</h1>
                 </div>
