--- a/src/html/work.html
+++ b/src/html/work.html
@@ -74,27 +74,98 @@
         </div>
     </nav>
 
-    <!-- Home Section -->
+    <!-- Work Section -->
     <section class="hero is-fullheight">
         <div class="hero-body has-text-centered fadeinbody">
             <div class="container">
                 <div class="work-heading">
                     <h1 class="title is-size-2 has-text-dark">Work</h1>
                 </div>
+
+                <div class="aboutline"></div>
+
+                <div class="columns is-centered" style="padding: 2rem 0; margin: 0 0;">
+                    <div class="column" style="padding: 0 0;">
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://i.imgur.com/vA1cn84.jpg" alt="Placeholder image">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <a class="title is-4"  href="work.html">Web Development</a>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    <p class="subtitle has-text-left">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column middlecard">
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://i.imgur.com/Oba79qP.jpg" alt="Placeholder image">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <a class="title is-4" href="work.html">Android</a>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    <p class="subtitle has-text-left">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column" style="padding: 0 0;">
+                        <div class="card" href="twitter.com">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://i.imgur.com/myvpoHC.jpg" alt="Placeholder image">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <a class="title is-4" href="work.html">Blog</a>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    <p class="subtitle has-text-left">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="content has-text-centered has-text-grey-light">
-            <p class="is-footer-element">
-                This website is licensed under a
-                <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
-            </p>
-        </div>
-    </footer>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="content has-text-centered has-text-grey-light">
+                <p class="is-footer-element">
+                    This website is licensed under a
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
+                </p>
+            </div>
+        </footer>
 
-</body>
+    </body>
 
-</html>
+    </html>
