Improve readability and add comments

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -7,7 +7,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="stylesheet" href="../../dist/css/styles.css">
 
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
@@ -22,8 +22,6 @@
 
   <!-- Navigation -->
   <div id="darkenbackground"></div>
-  <!-- <div class="helperline"></div> -->
-
   <nav class="navbar is-light has-background-white is-fixed-top">
     <div class="navbar-brand">
       <a class="navbar-item spaced-letters button-animated-min" href="index.html">
@@ -91,7 +89,7 @@
         <a class="button is-dark is-outlined is-rounded button-animated-min" href="mailto:hello@andrethiele.com">
           <span>Send a mail</span>
         </a>
-      </div>
+      </div> <!-- End Container -->
     </div>
   </section>
 
