--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,8 +22,6 @@
 
   <!-- Navigation -->
   <div id="darkenbackground"></div>
-  <!-- <div class="helperline"></div> -->
-
   <nav class="navbar is-light has-background-white is-fixed-top">
     <div class="navbar-brand">
       <a class="navbar-item spaced-letters button-animated-min" href="index.html">
@@ -78,9 +76,6 @@
   <section class="hero is-fullheight">
     <div class="hero-body has-text-centered fadeinbody header-image">
       <div class="container">
-        <!--<div class="helper-one"></div>-->
-        <!--<div class="helper-two"></div>-->
-
         <div class="welcome-heading">
           <h1 class="title is-size-2 has-text-white">Welcome</h1>
         </div>
@@ -94,7 +89,7 @@
         <a class="button is-white is-outlined is-rounded button-animated-min" href="about.html">
           <span>Learn more</span>
         </a>
-      </div>
+      </div> <!-- End Container -->
     </div>
   </section>
 
