--- a/src/html/work.html
+++ b/src/html/work.html
@@ -12,7 +12,7 @@
 
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
   <script language="javascript" type="text/javascript" src="../js/fade.js"></script>
-  
+
   <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon/favicon.ico">
   <link rel="icon" type="image/png" href="../assets/favicon/favicon.png" sizes="32x32">
   <link rel="apple-touch-icon" href="../assets/favicon/apple-touch-icon.png">
@@ -22,8 +22,6 @@
 
   <!-- Navigation -->
   <div id="darkenbackground"></div>
-  <!-- <div class="helperline"></div> -->
-
   <nav class="navbar is-light has-background-white is-fixed-top">
     <div class="navbar-brand">
       <a class="navbar-item spaced-letters button-animated-min" href="index.html">
@@ -85,6 +83,8 @@
         <div class="aboutline"></div>
 
         <div class="columns is-centered" style="padding: 2rem 0; margin: 0 0;">
+
+          <!-- Card One -->
           <div class="column" style="padding: 0 0;">
             <div class="card">
               <div class="card-image">
@@ -98,7 +98,6 @@
                     <a class="title is-4"  href="work.html">Web Development</a>
                   </div>
                 </div>
-
                 <div class="content">
                   <p class="subtitle has-text-left">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
@@ -107,6 +106,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Card Two -->
           <div class="column middlecard">
             <div class="card">
               <div class="card-image">
@@ -120,7 +121,6 @@
                     <a class="title is-4" href="work.html">Android</a>
                   </div>
                 </div>
-
                 <div class="content">
                   <p class="subtitle has-text-left">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
@@ -129,6 +129,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Card Three -->
           <div class="column" style="padding: 0 0;">
             <div class="card" href="twitter.com">
               <div class="card-image">
@@ -142,7 +144,6 @@
                     <a class="title is-4" href="work.html">Blog</a>
                   </div>
                 </div>
-
                 <div class="content">
                   <p class="subtitle has-text-left">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
@@ -152,8 +153,8 @@
             </div>
           </div>
 
-        </div>
-      </div>
+        </div> <!-- End Columns -->
+      </div> <!-- End Container -->
     </section>
 
     <!-- Footer -->
