--- a/src/html/about.html
+++ b/src/html/about.html
@@ -22,8 +22,6 @@
 
   <!-- Navigation -->
   <div id="darkenbackground"></div>
-  <!-- <div class="helperline"></div> -->
-
   <nav class="navbar is-light has-background-white is-fixed-top">
     <div class="navbar-brand">
       <a class="navbar-item spaced-letters button-animated-min" href="index.html">
@@ -74,7 +72,7 @@
     </div>
   </nav>
 
-  <!-- Home Section -->
+  <!-- About Section -->
   <section class="hero is-fullheight">
     <div class="hero-body has-text-centered fadeinbody">
       <div class="container">
@@ -118,7 +116,7 @@
         <a class="button is-dark is-outlined is-rounded button-animated-min" style="margin-top: 3rem; margin-bottom: 1rem;" href="work.html">
           <span>See my work</span>
         </a>
-      </div>
+      </div> <!-- End Container -->
     </div>
   </section>
 
