Remove line and add space

--- a/src/html/work.html
+++ b/src/html/work.html
@@ -80,9 +80,7 @@
           <h1 class="title is-size-2 has-text-dark">Work</h1>
         </div>
 
-        <div class="aboutline"></div>
-
-        <div class="columns is-centered" style="padding: 2rem 0; margin: 0 0;">
+        <div class="columns is-centered" style="padding: 0 0; margin: 0 0;">
 
           <!-- Card One -->
           <div class="column" style="padding: 0 0;">
@@ -95,7 +93,7 @@
               <div class="card-content">
                 <div class="media">
                   <div class="media-content">
-                    <a class="title is-4"  href="work.html">Web Development</a>
+                    <a class="title is-4"  href="work.html">Web</a>
                   </div>
                 </div>
                 <div class="content">
@@ -118,7 +116,7 @@
               <div class="card-content">
                 <div class="media">
                   <div class="media-content">
-                    <a class="title is-4" href="work.html">Android</a>
+                    <a class="title is-4" href="work.html">Java</a>
                   </div>
                 </div>
                 <div class="content">
