--- a/src/html/work.html
+++ b/src/html/work.html
@@ -75,7 +75,7 @@
   <!-- Work Section -->
   <section class="hero is-fullheight">
     <div class="hero-body has-text-centered fadeinbody">
-      <div class="container">
+      <div class="work-container container">
         <div class="work-heading">
           <h1 class="title is-size-2 has-text-dark">Work</h1>
         </div>
