--- a/src/html/about.html
+++ b/src/html/about.html
@@ -91,32 +91,22 @@
         <div class="aboutline"></div>
 
         <div class="about-text">
-          <p class="is-size-5 has-text-dark has-text-justified">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-            aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-            kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
-            diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-            sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
-            est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-            molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio
-            dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem
-            ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-            dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-            suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit
-            in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros
-            et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te
-            feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming
-            id quod mazim placerat facer.
+          <p class="is-size-5 has-text-dark has-text-justified" style="margin-bottom: 1rem;">
+            I discovered my passion for computers relatively early, when my father started talking about building a computer for a friend of his. My father asked me to watch him building the PC. Doing things different was always interesting to me, and building computers at the age of 11 was not necessarily normal. I even got a new RAM module and CPU for my own little PC as a gift for my 12th birthday, instead of some useless Nerf Gun. That‘s way cooler isn’t it? I quickly started engaging heavily with technology and did research on my own. I took these HTML and CSS books from my father that he used to learn these programming languages. He builds websites as a freelancer, besides his primary job. So while reading the book, I built my first own website at the age of 12 and had one primary advantage. I could ask someone directly. I got direct help from my father and it felt so good to talk about this subject because I felt ahead of time. At that time, I used Dreamweaver and Fireworks from Adobe to build and design the website. After that, I spent time focusing more on the software side of PC’s. I configured root servers with dynamic DNS services to play games with my friends that would otherwise require a physical LAN network or a virtual LAN. This way, I learned to handle with configuration files and port configuration on our router.
           </p>
-        </div>
 
-        <a class="button is-dark is-outlined is-rounded button-animated-min" style="margin-top: 3rem; margin-bottom: 1rem;" href="work.html">
-          <span>See my work</span>
-        </a>
-      </div> <!-- End Container -->
+          <p class="is-size-5 has-text-dark has-text-justified" style="margin-bottom: 1rem;">
+            After joining high school, I immediately attended the computer working group. I built a brand new, faster PC and began modding computer games to get even better graphics because I always wanted to be on the edge of what’s possible with current technology. Instead of actually playing games, I was either busy modding them or running the server to offer a platform for my friends. I began reading blogs to stay up-to-date with current technologies and always be one step ahead.
+          </p>
+
+          <p class="is-size-5 has-text-dark has-text-justified">
+            I applied for computer science at the Technische Hochschule Brandenburg to further deepen my understanding of it and focusing on the real deal. I did not choose this path because it is well paid or the degree has a good reputation, but because it is my passion. My first year of study was very successful. I completed a math and programming course with 1,0 each.
+          </p>
+          <a class="button is-dark is-outlined is-rounded button-animated-min" style="margin-top: 3rem; margin-bottom: 1rem;" href="work.html">
+            <span>See my work</span>
+          </a>
+        </div> 
+      </div><!-- End Container -->
     </div>
   </section>
 
