Adjust about text

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -99,9 +99,14 @@
             After joining high school, I immediately attended the computer working group. I built a brand new, faster PC and began modding computer games to get even better graphics because I always wanted to be on the edge of what’s possible with current technology. Instead of actually playing games, I was either busy modding them or running the server to offer a platform for my friends. I began reading blogs to stay up-to-date with current technologies and always be one step ahead.
           </p>
 
-          <p class="is-size-5 has-text-dark has-text-justified">
-            I applied for computer science at the Technische Hochschule Brandenburg to further deepen my understanding of it and focusing on the real deal. I did not choose this path because it is well paid or the degree has a good reputation, but because it is my passion. My first year of study was very successful. I completed a math and programming course with 1,0 each.
+          <p class="is-size-5 has-text-dark has-text-justified" style="margin-bottom: 1rem;">
+            I applied for computer science at the Technische Hochschule Brandenburg to further deepen my understanding of it and focusing on the real deal. I did not choose this path because it is well paid or the degree has a good reputation, but because it is my passion. At the moment I am in my third semester and my first year of study was very successful. I completed both programming courses and one math course with 1,0.
           </p>
+
+          <p class="is-size-5 has-text-dark has-text-justified">
+            I would like to thank my whole family, as well as my girlfriend Laura, for always supporting me.
+          </p>
+
           <a class="button is-dark is-outlined is-rounded button-animated-min" style="margin-top: 3rem; margin-bottom: 1rem;" href="work.html">
             <span>See my work</span>
           </a>
