--- a/src/html/work.html
+++ b/src/html/work.html
@@ -155,13 +155,29 @@
       </div> <!-- End Container -->
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
+  <!-- Footer -->
+  <footer class="footer">
       <div class="content has-text-centered has-text-grey-light">
+  
         <p class="is-footer-element">
           This website is licensed under a
           <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
         </p>
+  
+  
+        <p class="is-footer-element">
+          <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;">
+            <span class="icon is-small">
+              <i class="fab fa-github"></i>
+            </span>
+          </a>
+          <a class="link" href="https://twitter.com/itsandreramon">
+            <span class="icon is-small">
+              <i class="fab fa-twitter"></i>
+            </span>
+          </a>
+        </p>
+  
       </div>
     </footer>
 
