Adjust footer and add form fields

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -74,34 +74,95 @@
 
   <!-- Contact Section -->
   <section class="hero is-fullheight">
-    <div class="hero-body has-text-centered fadeinbody">
+    <div class="hero-body fadeinbody">
       <div class="container">
-        <div class="contact-heading">
+        <div class="contact-heading has-text-centered">
           <h1 class="title is-size-2 has-text-dark">Contact</h1>
         </div>
 
-        <div class="contact-text">
+        <div class="contact-text has-text-centered">
           <p class="subtitle has-text-dark">
-            hello@andrethiele.com
+            Get in touch with me via email or, if you prefer, reach out to me on Twitter
+            <a href="https://twitter.com/itsandreramon">@itsandreramon</a>.
           </p>
         </div>
 
-        <a class="button is-dark is-outlined is-rounded button-animated-min" href="mailto:hello@andrethiele.com">
-          <span>Send a mail</span>
-        </a>
-      </div> <!-- End Container -->
+        <div class="form">
+          <div class="field">
+            <label class="label">Your Name</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Name">
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label">Email address</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Email">
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label">Subject of your message</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Subject">
+            </div>
+          </div>
+
+          <div class="field">
+              <label class="label">How did you hear about me?</label>
+              <div class="control">
+                <input class="input" type="text" placeholder="For example via Twitter">
+              </div>
+            </div>
+
+          <div class="field">
+            <label class="label is-normal">Message</label>
+            <div class="control">
+              <textarea class="textarea" placeholder="Message"></textarea>
+
+              <p class="help is-danger">
+                This field is required
+              </p>
+            </div>
+          </div>
+
+          <div class="field">
+            <div class="control">
+              <button class="button is-dark">Submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Container -->
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="content has-text-centered has-text-grey-light">
-      <p class="is-footer-element">
-        This website is licensed under a
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
-      </p>
-    </div>
-  </footer>
+      <div class="content has-text-centered has-text-grey-light">
+  
+        <p class="is-footer-element">
+          This website is licensed under a
+          <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
+        </p>
+  
+  
+        <p class="is-footer-element">
+          <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;">
+            <span class="icon is-small">
+              <i class="fab fa-github"></i>
+            </span>
+          </a>
+          <a class="link" href="https://twitter.com/itsandreramon">
+            <span class="icon is-small">
+              <i class="fab fa-twitter"></i>
+            </span>
+          </a>
+        </p>
+  
+      </div>
+    </footer>
 
 </body>
 
