--- a/src/html/index.html
+++ b/src/html/index.html
@@ -89,21 +89,39 @@
         <a class="button is-white is-outlined is-rounded button-animated-min" href="about.html">
           <span>Learn more</span>
         </a>
-      </div> <!-- End Container -->
+      </div>
+      <!-- End Container -->
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
     <div class="content has-text-centered has-text-grey-light">
-      <p class="is-footer-element">
+
+      <p class="is-footer-element has-smaller-margin">
         Photo by
         <a rel="license" href="https://unsplash.com/photos/Fehuczca-MM" target="_blank">Cason Asher</a>.
       </p>
+
       <p class="is-footer-element">
         This website is licensed under a
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
       </p>
+
+
+      <p class="is-footer-element">
+        <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;">
+          <span class="icon is-small">
+            <i class="fab fa-github"></i>
+          </span>
+        </a>
+        <a class="link" href="https://twitter.com/itsandreramon">
+          <span class="icon is-small">
+            <i class="fab fa-twitter"></i>
+          </span>
+        </a>
+      </p>
+
     </div>
   </footer>
 
