Open footer links in new tab

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -149,12 +149,12 @@
   
   
         <p class="is-footer-element">
-          <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;">
+          <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
             <span class="icon is-small">
               <i class="fab fa-github"></i>
             </span>
           </a>
-          <a class="link" href="https://twitter.com/itsandreramon">
+          <a class="link" href="https://twitter.com/itsandreramon" target="_blank">
             <span class="icon is-small">
               <i class="fab fa-twitter"></i>
             </span>
