--- a/src/html/about.html
+++ b/src/html/about.html
@@ -92,15 +92,33 @@
 
         <div class="about-text">
           <p class="is-size-5 has-text-dark has-text-justified" style="margin-bottom: 1rem;">
-            I discovered my passion for computers relatively early, when my father started talking about building a computer for a friend of his. My father asked me to watch him building the PC. Doing things different was always interesting to me, and building computers at the age of 11 was not necessarily normal. I even got a new RAM module and CPU for my own little PC as a gift for my 12th birthday, instead of some useless Nerf Gun. That‘s way cooler isn’t it? I quickly started engaging heavily with technology and did research on my own. I took these HTML and CSS books from my father which he used to learn these programming languages. He builds websites as a freelancer, besides his primary job. While reading the book, I built my first own website at the age of 12 and had one primary advantage. I could ask someone directly. I got direct help from my father and it felt so good to talk about this subject because I felt ahead of time. At that time, I used Dreamweaver and Fireworks from Adobe to build and design the website. After that, I spent time focusing more on the software side of PC’s. I configured root servers with dynamic DNS services to play games with my friends that would otherwise require a physical LAN network or a virtual LAN. This way, I learned to handle with configuration files and port configuration on our router.
+            I discovered my passion for computers relatively early, when my father started talking about building a computer for a friend
+            of his. My father asked me to watch him building the PC. Doing things different was always interesting to me,
+            and building computers at the age of 11 was not necessarily normal. I even got a new RAM module and CPU for my
+            own little PC as a gift for my 12th birthday, instead of some useless Nerf Gun. That‘s way cooler isn’t it? I
+            quickly started engaging heavily with technology and did research on my own. I took these HTML and CSS books
+            from my father which he used to learn these programming languages. He builds websites as a freelancer, besides
+            his primary job. While reading the book, I built my first own website at the age of 12 and had one primary advantage.
+            I could ask someone directly. I got direct help from my father and it felt so good to talk about this subject
+            because I felt ahead of time. At that time, I used Dreamweaver and Fireworks from Adobe to build and design the
+            website. After that, I spent time focusing more on the software side of PC’s. I configured root servers with
+            dynamic DNS services to play games with my friends that would otherwise require a physical LAN network or a virtual
+            LAN. This way, I learned to handle with configuration files and port configuration on our router.
           </p>
 
           <p class="is-size-5 has-text-dark has-text-justified" style="margin-bottom: 1rem;">
-            After joining high school, I immediately attended the computer working group. I built a brand new, faster PC and began modding computer games to get even better graphics because I always wanted to be on the edge of what’s possible with current technology. Instead of actually playing games, I was either busy modding them or running the server to offer a platform for my friends. I began reading blogs to stay up-to-date with current technologies and always be one step ahead.
+            After joining high school, I immediately attended the computer working group. I built a brand new, faster PC and began modding
+            computer games to get even better graphics because I always wanted to be on the edge of what’s possible with
+            current technology. Instead of actually playing games, I was either busy modding them or running the server to
+            offer a platform for my friends. I began reading blogs to stay up-to-date with current technologies and always
+            be one step ahead.
           </p>
 
           <p class="is-size-5 has-text-dark has-text-justified" style="margin-bottom: 1rem;">
-            I applied for computer science at the Technische Hochschule Brandenburg to further deepen my understanding of it and focusing on the real deal. I did not choose this path because it is well paid or the degree has a good reputation, but because it is my passion. At the moment I am in my third semester and my first year of study was very successful. I completed both programming courses and one math course with 1,0.
+            I applied for computer science at the Technische Hochschule Brandenburg to further deepen my understanding of it and focusing
+            on the real deal. I did not choose this path because it is well paid or the degree has a good reputation, but
+            because it is my passion. At the moment I am in my third semester and my first year of study was very successful.
+            I completed both programming courses and one math course with 1,0.
           </p>
 
           <p class="is-size-5 has-text-dark has-text-justified">
@@ -110,36 +128,37 @@
           <a class="button is-dark is-outlined is-rounded button-animated-min" style="margin-top: 3rem; margin-bottom: 1rem;" href="work.html">
             <span>See my work</span>
           </a>
-        </div> 
-      </div><!-- End Container -->
+        </div>
+      </div>
+      <!-- End Container -->
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-      <div class="content has-text-centered has-text-grey-light">
-  
-        <p class="is-footer-element">
-          This website is licensed under a
-          <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
-        </p>
-  
-  
-        <p class="is-footer-element">
-          <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
-            <span class="icon is-small">
-              <i class="fab fa-github"></i>
-            </span>
-          </a>
-          <a class="link" href="https://twitter.com/itsandreramon" target="_blank">
-            <span class="icon is-small">
-              <i class="fab fa-twitter"></i>
-            </span>
-          </a>
-        </p>
-  
-      </div>
-    </footer>
+    <div class="content has-text-centered has-text-grey-light">
+
+      <p class="is-footer-element">
+        This website is licensed under a
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" class="button-animated-min">CC BY NC ND 4.0 International License</a>.
+      </p>
+
+      <p class="is-footer-element">
+        <a class="link button-animated-min" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
+          <span class="icon is-small">
+            <i class="fab fa-github"></i>
+          </span>
+        </a>
+
+        <a class="link button-animated-min" href="https://twitter.com/itsandreramon" target="_blank">
+          <span class="icon is-small">
+            <i class="fab fa-twitter"></i>
+          </span>
+        </a>
+      </p>
+
+    </div>
+  </footer>
 
 </body>
 
